src/objects/booking__Person_User_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>booking__Branch_Default_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch Default User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>booking__Branch__c</referenceTo>
        <relationshipLabel>Person User Mappings</relationshipLabel>
        <relationshipName>Person_User_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>booking__Person_Id__c</fullName>
        <label>Person Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_User_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Person User Mapping</label>
    <nameField>
        <label>Person User Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person User Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>